syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.pingpong.stubs";

package stubs;

service PingPongService {
  rpc pingPong (PingRequest) returns (PongResponse) {}
}

message PingRequest {
  string message = 1;
  int64 timestamp = 2;
}

message PongResponse {
  string message = 1;
  int64 timestamp = 2;
}